# SimpleCppBenchmark

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: benchmark.cpp  benchmark.h  formatters.cpp  formatters.h  main.cpp
